--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -470,6 +470,7 @@ p {
   font-family: "AL";
   font-size: 30px;
   text-transform: uppercase;
+  font-weight: lighter;
 }
 
 .container-5_img-block {
