--- a/Tansilotren-Moldova/css/style.css
+++ b/Tansilotren-Moldova/css/style.css
@@ -159,7 +159,7 @@ div {
   top: 80px;
   left: 20px;
   width: 80px;
-  height: 80px;
+  height: 60px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
@@ -170,10 +170,11 @@ div {
 
 .instruction p {
   position: relative;
-  left: -4px;
+  left: 0px;
   top: 75px;
+  text-align: center;
   font-size: 13px;
-  color: black;
+  color: #a00067;
   background-color: transparent;
 }
 
@@ -1158,14 +1159,14 @@ h2 b {
   }
 
   .instruction {
-    height: 60px;
+    height: 40px;
     width: 60px;
     top: 60px;
     left: 5px;
   }
   .instruction p {
-    left: -10px;
-    top: 35px;
+    left: 0px;
+    top: 45px;
     font-size: 9px;
   }
 
@@ -1239,7 +1240,7 @@ h2 b {
   }
 
   .disclamer-warning p {
-    font-size: 70px;
+    font-size: 63px;
     line-height: 100px;
   }
 
@@ -1437,11 +1438,14 @@ h2 b {
 }
 
 @media screen and (max-width: 450px) {
+  .header-title b {
+    font-size: 40px;
+  }
   .logo-container {
     position: initial;
   }
   .disclamer-warning p {
-    font-size: 35px;
+    font-size: 29px;
     line-height: 50px;
   }
   .header-main-center p {
@@ -1477,7 +1481,7 @@ h2 b {
     font-size: 10px !important;
     line-height: 10px !important;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 10px 5px;
     border-radius: 10px;
   }
 
