--- a/Coldisept/css/style.css
+++ b/Coldisept/css/style.css
@@ -1766,6 +1766,9 @@ font-size: 14px;
   margin-right: 10px;
 }
 
+.full-load {
+  margin-top: -50px;
+}
 
 
 
@@ -2206,6 +2209,15 @@ ol {
   }
 }
 @media screen and (max-width: 760px) {
+
+
+
+  .container-5_plate:nth-child(1) {
+  margin-bottom: 0;
+}
+.container-5_plate:nth-child(2) {
+  margin-bottom: 0;
+}
   .popup__body, .popup__content {
     flex-wrap: wrap;
     /* margin: 0 20px; */
@@ -2956,5 +2968,10 @@ ol {
 .show2 {
   display: block !important;
   background: url(../images/logo-en.svg) no-repeat center / contain !important;
+  /*transition: 0.5s;*/
+}
+.show3 {
+  display: block !important;
+  background: url(../images/logo.svg) no-repeat center / contain !important;
   /*transition: 0.5s;*/
 }
